in.vrsf.freshrss/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss-deployment
  namespace: freshrss
spec:
  selector:
    matchLabels:
      run: freshrss
  replicas: 1
  template:
    metadata:
      labels:
        run: freshrss
    spec:
      containers:
        - name: freshrss
          image: freshrss/freshrss:1.23.1
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          volumeMounts:
            - name: data
              mountPath: /var/www/FreshRSS/data
            - name: extensions
              mountPath: /var/www/FreshRSS/extensions
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: freshrss-data-lh-pvc
        - name: extensions
          persistentVolumeClaim:
            claimName: freshrss-extensions-lh-pvc
