in.vrsf.freshrss/service.yml
apiVersion: v1
kind: Service
metadata:
  name: freshrss-service
  namespace: freshrss
spec:
  selector:
    run: freshrss
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    name: freshrss
